gcc/testsuite/rust/compile/issue-4261.rs
#[cfg()]
// { dg-error "malformed .cfg. attribute input" "" { target *-*-* } .-1 }
fn a() {}
